--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,8 @@ html
     title= title
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1")
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
     script(src="/javascripts/bundle.js")
+    script(src="/javascripts/token.js")
     block content
