--- a/views/header.pug
+++ b/views/header.pug
@@ -1,13 +1,12 @@
 mixin header
   div.shadow-xl
     header.py-4.px-8.flex.items-center.space.justify-between.container.max-w-screen-md.mx-auto
-      a.flex.items-center(href="/")
-        svg.inline.text-green-500(xmlns="http://www.w3.org/2000/svg" fill="none" height="28" width="28" viewBox="0 0 24 24" stroke="currentColor")
-          path(stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z")
-        span.text-xl.text-gray-800.font-bold.ml-1.tracking-tight bligblog
+      a.flex.items-center(href="/posts")
+        img(height="48px" src="/images/odin-logo-2d729f16279e9fc3b58ce847eacf07f883bdfc95eb23bb5064ed59d36ef551d6.svg")
+        span.text-xl.text-gray-800.font-bold.ml-1.tracking-tight odinbook
       div.text-sm.text-gray-500
         if user
-          a(href="#") #{user.username}
+          a(href="/users/" + user._id) #{user.username}
           a.ml-8(href="/logout") Logout
         else
           a(href="/login") Login
