--- a/views/post.pug
+++ b/views/post.pug
@@ -1,12 +1,15 @@
 mixin post(postarg, postlist)
   div.space-y-5.p-8
-    h2.text-2xl.font-semibold
-      a(href="/posts/" + postarg._id) #{postarg.title}
+    div
+      p.text-md.text-gray-800.font-semibold #{postarg.author.first_name} #{postarg.author.last_name}
+      p.span.text-gray-500.text-sm #{postarg.timestamp_formatted}
     p.text-md.text-gray-500 #{postarg.content}
-    p.text-sm.text-gray-800 #{postarg.author.first_name} #{postarg.author.last_name} 
-      span.text-gray-500 • #{postarg.timestamp_formatted}
+    p.text-sm
       if postlist
         if postarg.comments.length === 0
-          a.text-gray-500(href="/posts/" + postarg._id + "#comments")  • No comments
+          a.text-gray-500(href="/posts/" + postarg._id + "#comments") No comments
         else
-          a.text-gray-500(href="/posts/" + postarg._id + "#comments")  • #{postarg.comments.length} comments
+          a.text-gray-500(href="/posts/" + postarg._id + "#comments") #{postarg.comments.length} comments
+      span.text-gray-500  • 
+      svg( height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor").inline.text-gray-500
+        path( d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z")
