--- a/views/post_form.pug
+++ b/views/post_form.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  div.h-screen.w-screen.bg-green-500.flex.items-center.justify-center.flex-col
+  div.h-screen.w-screen.bg-yellow-500.flex.items-center.justify-center.flex-col
     form.container.bg-white.mx-auto.p-6.grid.grid-cols-1.gap-3.self-center(class="sm:max-w-lg sm:shadow-lg sm:rounded-lg" method="POST" action="")
       h2.text-gray-900.font-semibold #{title}
       label.block
@@ -10,7 +10,7 @@ block content
       label.block
         span.text-gray-700.text-sm Enter your blog post
         textarea(name="post" class="mt-1 block w-full rounded-md bg-gray-200 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0" rows="3" style="margin-top: 4px; margin-bottom: 0px; height: 85px;") #{post.content}
-      button.bg-green-400.text-white.rounded-md.mt-1(type="submit" class="py-2.5") Submit
+      button.bg-yellow-400.text-white.rounded-md.mt-1(type="submit" class="py-2.5") Submit
       if post.title !== ""
         a.flex.items-center.justify-center(class="text-gray-400 border-2 border-gray-400 py-2.5 px-8 rounded-md" href="/posts/" + post._id) Go back
       if errors
@@ -22,5 +22,5 @@ block content
               span.ml-2 #{error.msg}
     div.m-4
       a.text-white.text-sm(href="/") Home 
-      span.text-green-400.text-sm.m-1 · 
+      span.text-yellow-400.text-sm.m-1 · 
       a.text-white.text-sm(href="/logout") Logout
