--- a/views/signup_form.pug
+++ b/views/signup_form.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  div.h-screen.w-screen.bg-green-500.flex.items-center.justify-center.flex-col
+  div.h-screen.w-screen.bg-yellow-500.flex.items-center.justify-center.flex-col
     form.container.bg-white.mx-auto.p-6.grid.grid-cols-1.gap-3.self-center(class="sm:max-w-lg sm:shadow-lg sm:rounded-lg" method="POST" action="")
       h2.text-gray-900.font-semibold Create an account
       label.block
@@ -16,7 +16,7 @@ block content
       label.block
         span.text-gray-700.text-sm Password
         input(type="password" name="password" class="mt-1 block w-full rounded-md bg-gray-200 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0")
-      button.bg-green-400.text-white.rounded-md.mt-1(type="submit" class="py-2.5") Signup
+      button.bg-yellow-400.text-white.rounded-md.mt-1(type="submit" class="py-2.5") Signup
       if errors
         ul
           each error in errors
@@ -26,5 +26,5 @@ block content
               span.ml-2 #{error.msg}
     div.m-4
       a.text-white.text-sm(href="/") Home 
-      span.text-green-400.text-sm.m-1 · 
+      span.text-yellow-400.text-sm.m-1 · 
       a.text-white.text-sm(href="/login") Login
