--- a/views/header.pug
+++ b/views/header.pug
@@ -2,7 +2,7 @@ mixin header
   div.shadow-xl
     header.py-4.px-8.flex.items-center.space.justify-between.container.max-w-screen-md.mx-auto
       a.flex.items-center(href="/posts")
-        img(height="48px" src="/images/odin-logo-2d729f16279e9fc3b58ce847eacf07f883bdfc95eb23bb5064ed59d36ef551d6.svg")
+        img(src="/images/odin-logo.svg")
         span.text-xl.text-gray-800.font-bold.ml-1.tracking-tight odinbook
       div.text-sm.text-gray-500
         if user
