constructing user page

--- a/views/header.pug
+++ b/views/header.pug
@@ -1,5 +1,5 @@
 mixin header
-  div.shadow-xl
+  div.shadow-xl.fixed.w-screen.bg-white
     header.py-4.px-8.flex.items-center.space.justify-between.container.max-w-screen-md.mx-auto
       a.flex.items-center(href="/posts")
         img(src="/images/odin-logo.svg")
