--- a/views/user_detail.pug
+++ b/views/user_detail.pug
@@ -6,6 +6,17 @@ include ./posts.pug
 
 block content
   +header
-  div.container.max-w-screen-md.mx-auto.pt-32.flex.justify-center
+  div(class="sm:flex-row").container.max-w-screen-md.mx-auto.p-6.pt-32.flex.flex-col.space-y-5.items-center
+    div(class="sm:w-48 sm:h-48 sm:rounded" style="background-image: url('/images/" + user.picture + "');").h-64.w-screen.bg-yellow-400.bg-cover
     h1.text-3xl.font-semibold.text-gray-800 #{user.first_name} #{user.last_name}
+    div.flex.flex-col
+      p.text-gray-500.flex.items-center
+        svg(height="20" width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor").inline
+          path(fillRule="evenodd" d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z" clipRule="evenodd")
+        span.ml-1 #{user.location}
+      p.text-gray-500.text-gray-500.flex.items-center
+        svg(height="20" width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor").inline
+          path(fillRule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clipRule="evenodd")
+        span.ml-1 #{user.friends.length}
+
   +posts(post_list)
