--- a/views/header.pug
+++ b/views/header.pug
@@ -4,10 +4,11 @@ mixin header
       a.flex.items-center(href="/posts")
         img(src="/images/odin-logo.svg")
         span.text-xl.text-gray-800.font-bold.ml-1.tracking-tight odinbook
-      div.text-sm.text-gray-500
-        if user
-          a(href="/users/" + user._id) #{user.username}
-          a.ml-8(href="/logout") Logout
-        else
-          a(href="/login") Login
-          a.ml-8(href="/signup") Signup
+      div.text-md.font-semibold.text-gray-500.flex.items-center
+        a(href="/users/" + user._id)
+          div(style="background-image: url('/images/" + user.picture + "');").h-12.w-12.bg-yellow-400.rounded.bg-cover
+        a(class="sm:inline" href="/users/" + user._id).ml-2.hidden #{user.username}
+        a.ml-4(href="/logout").hidden
+          svg(height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor")
+            path(fill-rule="evenodd" d="M3 3a1 1 0 00-1 1v12a1 1 0 102 0V4a1 1 0 00-1-1zm10.293 9.293a1 1 0 001.414 1.414l3-3a1 1 0 000-1.414l-3-3a1 1 0 10-1.414 1.414L14.586 9H7a1 1 0 100 2h7.586l-1.293 1.293z" clip-rule="evenodd")
+
