--- a/views/request.pug
+++ b/views/request.pug
@@ -1,5 +1,5 @@
 mixin request(requestarg)
-  div.flex.justify-between.p-4
+  div.flex.p-4.flex-col.items-center.space-y-2(class="sm:flex-row sm:justify-between")
     div.flex.items-center
       a(href="/users/" + requestarg._id)
         div(style="background-image: url('/images/" + requestarg.picture + "');").h-20.w-20.bg-yellow-400.rounded.bg-cover
@@ -7,4 +7,4 @@ mixin request(requestarg)
         a(href="/users/" + requestarg._id).text-md.text-gray-800.font-semibold #{requestarg.first_name} #{requestarg.last_name}
     form(method="POST" action="").flex.items-center
       input(type='hidden',name='postid', required='true', value="null" )
-      button.bg-yellow-500.text-white.rounded-md(type="submit" class="py-2.5").px-6 Accept friend request
+      button.bg-yellow-500.text-white.rounded-md(type="submit" class="py-2.5 sm:px-6").w-64 Accept friend request
