--- a/views/friend_list.pug
+++ b/views/friend_list.pug
@@ -1,13 +1,15 @@
 extends layout
 
 include ./header.pug
-include ./user.pug
-include ./users.pug
+include ./friend.pug
+include ./friends.pug
 
 block content
   +header
-  div.pt-24.container.max-w-screen-md.mx-auto.p-4
-    a(href="/users").text-center.block
-      div(class="py-2.5").bg-yellow-400.text-white.rounded-md Find Friends
   div.pt-24
-    +users(user_list)
+  if user._id.toString() === id.toString()
+    div.container.max-w-screen-md.mx-auto.p-4
+      a(href="/users").text-center.block
+        div(class="py-2.5").bg-yellow-400.text-white.rounded-md Find Friends
+  div
+    +friends(friend_list)
