fixed empty list html

--- a/views/friends.pug
+++ b/views/friends.pug
@@ -1,7 +1,7 @@
 mixin friends(friend_list)
     div.container.max-w-screen-md.mx-auto
-      ul
-        if friend_list
+      if friend_list.length > 0
+        ul
           each friend in friend_list
             li
               +friend(friend)
