--- a/views/friend_list.pug
+++ b/views/friend_list.pug
@@ -7,6 +7,9 @@ include ./friends.pug
 block content
   +header
   div.pt-24
+  if friend_list.length === 0
+    div.flex.align-center.flex-col.px-6.text-center
+      p.text-gray-500.font-semibold.text-xl You don't have any friends
   if user._id.toString() === id.toString()
     div.container.max-w-screen-md.mx-auto.p-4
       a(href="/users").text-center.block
