--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,5 +7,5 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     script(src="/javascripts/bundle.js")
-    script(src="/javascripts/token.js")
+    script(src="/javascripts/script.js")
     block content
