menu added to comments

--- a/views/post.pug
+++ b/views/post.pug
@@ -54,9 +54,22 @@ mixin post(postarg, postlist)
                     div.ml-2
                       a(href="/users/" + comment.author._id).text-sm.text-gray-800.font-semibold #{comment.author.first_name} #{comment.author.last_name}
                       p.span.text-gray-500.text-xs #{comment.timestamp_formatted}
-                  a(href="#").text-gray-500
-                    svg(height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor")
-                      path(d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z")
+                  if comment.author._id.toString() === user._id.toString()
+                    button(onclick="handlePostMenuClick('" + comment._id + "-menu' )").text-gray-500.relative
+                      svg(height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor")
+                        path(d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z")
+                      div(id=comment._id + "-menu" ).absolute.shadow-lg.rounded.p-4.right-0.w-28.bg-white.hidden
+                        ul
+                          li.flex.items-center
+                            a(href="/posts/" + postarg._id + "/comments/" + comment._id + "/edit")
+                              svg(height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor").inline
+                                path(d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z")
+                              span.ml-2 Edit
+                          li.flex.items-center.mt-4
+                            a(href="/posts/" + postarg._id + "/comments/" + comment._id + "/delete")
+                              svg(height="16" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor").inline
+                                path(stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16")
+                              span.ml-2 Delete
                 p.text-sm.text-gray-500 #{comment.content}
                 div.flex.items-end.justify-between
                   div.flex.items-center(id=comment._id + "-likes" style="cursor:pointer")
