--- a/views/login_form.pug
+++ b/views/login_form.pug
@@ -2,6 +2,11 @@ extends layout
 
 block content
   div.h-screen.w-screen.bg-yellow-500.flex.items-center.justify-center.flex-col
+    div.m-8.text-center
+      div.flex.align-center.justify-center
+        img(src="/images/odin-logo.svg")
+        h1.text-white.text-6xl.font-semibold.tracking-tight odinbook
+      div.text-yellow-100.text-2xl.w-96.mt-4 Connect with vikings and the world around you on Odinbook
     form.container.bg-white.mx-auto.p-6.grid.grid-cols-1.gap-3.self-center(class="sm:max-w-lg sm:shadow-lg sm:rounded-lg" method="POST" action="")
       h2.text-gray-900.font-semibold Login to your account
       label.block
@@ -19,8 +24,6 @@ block content
                 path(fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd")
               span.ml-2 #{error.msg}
     div.m-4
-      a.text-white.text-sm(href="/") Home 
-      span.text-yellow-400.text-sm.m-1 · 
       a.text-white.text-sm(href="/signup") Create an account
     
 
