--- a/views/post_delete.pug
+++ b/views/post_delete.pug
@@ -5,8 +5,9 @@ block content
     form.container.bg-white.mx-auto.p-6.grid.grid-cols-1.gap-3.self-center(class="sm:max-w-lg sm:shadow-lg sm:rounded-lg" method="POST" action="")
       h2.text-gray-900.font-semibold #{title}
       input(type='hidden',name='postid', required='true', value=postId )
+      input(type='hidden',name='return_address', required='true', value=return_address )
       button.bg-red-600.text-white.rounded-md.mt-1(type="submit" class="py-2.5") Yes, DELETE the post
-      a.flex.items-center.justify-center(class="text-gray-400 border-2 border-gray-400 py-2.5 px-8 rounded-md" href="/posts/" + postId) Go back
+      a.flex.items-center.justify-center(class="text-gray-400 border-2 border-gray-400 py-2.5 px-8 rounded-md" href=return_address) Go back
     div.m-4
       a.text-white.text-sm(href="/") Home 
       span.text-yellow-400.text-sm.m-1 · 
