--- a/views/comment_form.pug
+++ b/views/comment_form.pug
@@ -6,9 +6,10 @@ block content
       h2.text-gray-900.font-semibold #{title}
       label.block
         textarea(name="comment" class="mt-1 block w-full rounded-md bg-gray-200 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0" rows="3" style="margin-top: 4px; margin-bottom: 0px; height: 85px;") #{comment.content}
+      input(type='hidden',name='return_address', required='true', value=return_address )
       button.bg-yellow-400.text-white.rounded-md.mt-1(type="submit" class="py-2.5") Submit
       if postId
-        a.flex.items-center.justify-center(class="text-gray-400 border-2 border-gray-400 py-2.5 px-8 rounded-md" href="/posts/" + postId + "#comments") Go back
+        a.flex.items-center.justify-center(class="text-gray-400 border-2 border-gray-400 py-2.5 px-8 rounded-md" href=return_address) Go back
       if errors
         ul
           each error in errors
