--- a/views/login_form.pug
+++ b/views/login_form.pug
@@ -1,30 +1,31 @@
 extends layout
 
 block content
-  div.h-screen.w-screen.bg-yellow-500.flex.items-center.justify-center.flex-col
-    div.m-8.text-center
+  div.h-screen.w-screen.bg-yellow-500.flex.items-center.justify-center.flex-col(class="lg:flex-row")
+    div.mx-8.mb-12.text-center
       div.flex.align-center.justify-center
         img(src="/images/odin-logo.svg")
         h1.text-white.text-6xl.font-semibold.tracking-tight odinbook
       div.text-yellow-100.text-2xl.w-96.mt-4 Connect with vikings and the world around you on Odinbook
-    form.container.bg-white.mx-auto.p-6.grid.grid-cols-1.gap-3.self-center(class="sm:max-w-lg sm:shadow-lg sm:rounded-lg" method="POST" action="")
-      h2.text-gray-900.font-semibold Login to your account
-      label.block
-        span.text-gray-700.text-sm User name
-        input#username(type="text" name="username" class="mt-1 block w-full rounded-md bg-gray-200 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0")
-      label.block
-        span.text-gray-700.text-sm Password
-        input#password(type="password" name="password" class="mt-1 block w-full rounded-md bg-gray-200 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0")
-      button.bg-yellow-400.text-white.rounded-md.mt-1(type="submit" class="py-2.5") Login
-      if errors
-        ul
-          each error in errors
-            li.text-red-700.text-sm.flex.items-center
-              svg.inline(xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="0 0 20 20" fill="currentColor")
-                path(fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd")
-              span.ml-2 #{error.msg}
-    div.m-4
-      a.text-white.text-sm(href="/signup") Create an account
+    div.flex.items-center.justify-center.flex-col.container.max-w-md(class="sm:max-w-sm")
+      form.bg-white.mx-auto.p-6.grid.grid-cols-1.gap-3.self-center.w-full(class="sm:shadow-lg sm:rounded-lg" method="POST" action="")
+        h2.text-gray-900.font-semibold Login to your account
+        label.block
+          span.text-gray-700.text-sm User name
+          input#username(type="text" name="username" class="mt-1 block w-full rounded-md bg-gray-200 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0")
+        label.block
+          span.text-gray-700.text-sm Password
+          input#password(type="password" name="password" class="mt-1 block w-full rounded-md bg-gray-200 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0")
+        button.bg-yellow-400.text-white.rounded-md.mt-1(type="submit" class="py-2.5") Login
+        if errors
+          ul
+            each error in errors
+              li.text-red-700.text-sm.flex.items-center
+                svg.inline(xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="0 0 20 20" fill="currentColor")
+                  path(fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd")
+                span.ml-2 #{error.msg}
+      div.m-4
+        a.text-white.text-sm(href="/signup") Create an account
     
 
 
