--- a/views/user_detail.pug
+++ b/views/user_detail.pug
@@ -25,8 +25,9 @@ block content
             svg(height="16" width="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor").inline
               path(fillRule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clipRule="evenodd")
             span.ml-1 #{user_info.friends.length}
-          a(href="/users/" + user_info._id + "/friends/requests").text-gray-500.text-gray-500.flex.items-center.ml-2
-            svg(height="17" width="17" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor")
-              path(d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z")
-            span.ml-1 #{user_info.friend_requests.length}
+          if user._id.toString() === user_info._id.toString()
+            a(href="/users/" + user_info._id + "/friends/requests").text-gray-500.text-gray-500.flex.items-center.ml-2
+              svg(height="17" width="17" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor")
+                path(d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z")
+              span.ml-1 #{user_info.friend_requests.length}
   +posts(post_list)
