routing for non-users fixed

--- a/views/login_form.pug
+++ b/views/login_form.pug
@@ -6,7 +6,7 @@ block content
       div.flex.align-center.justify-center
         img(src="/images/odin-logo.svg")
         h1.text-white.text-6xl.font-semibold.tracking-tight odinbook
-      div.text-yellow-100.text-2xl.w-96.mt-4 Connect with vikings and the world around you on Odinbook
+      div.text-yellow-100.text-2xl.mt-4(class="sm:w-96") Connect with vikings and the world around you on Odinbook
     div.flex.items-center.justify-center.flex-col.container.max-w-md(class="sm:max-w-sm")
       form.bg-white.mx-auto.p-6.grid.grid-cols-1.gap-3.self-center.w-full(class="sm:shadow-lg sm:rounded-lg" method="POST" action="")
         h2.text-gray-900.font-semibold Login to your account
