--- a/views/user_form.pug
+++ b/views/user_form.pug
@@ -20,6 +20,7 @@ block content
         span.text-gray-700.text-sm User name
         input(type="text" name="username" class="mt-1 block w-full rounded-md bg-gray-200 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0" value=user.username)
       button.bg-yellow-400.text-white.rounded-md.mt-1(type="submit" class="py-2.5") Submit
+      a.flex.items-center.justify-center(class="text-gray-400 border-2 border-gray-400 py-2.5 px-8 rounded-md" href=return_address) Go back      
       if errors
         ul
           each error in errors
@@ -29,5 +30,5 @@ block content
               span.ml-2 #{error.msg}
     div.m-4
       a.text-white.text-sm(href="/") Home 
-        span.text-yellow-400.text-sm.m-1 · 
+      span.text-yellow-400.text-sm.m-1 · 
       a.text-white.text-sm(href="/logout") Logout
