adding image upload to signup page

--- a/views/signup_form.pug
+++ b/views/signup_form.pug
@@ -17,6 +17,9 @@ block content
         span.text-gray-700.text-sm Date of Birth
         input(type="date" name="dob" class="mt-1 block w-full rounded-md bg-gray-200 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0")
       label.block
+        div.text-gray-700.text-sm Add a profile picture
+        input.mt-1(type="file" accept="image/*" name="photo")
+      label.block
         span.text-gray-700.text-sm User name
         input(type="text" name="username" class="mt-1 block w-full rounded-md bg-gray-200 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0")
       label.block
