--- a/views/login_form.pug
+++ b/views/login_form.pug
@@ -17,13 +17,13 @@ block content
           span.text-gray-700.text-sm Password
           input#password(type="password" name="password" class="mt-1 block w-full rounded-md bg-gray-200 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0")
         button.bg-yellow-400.text-white.rounded-md.mt-1(type="submit" class="py-2.5") Login
-        if errors
+        a(href="/auth/facebook" type="submit" class="py-2.5").bg-yellow-400.text-white.rounded-md.mt-1.text-center Login with facebook
+        if message
           ul
-            each error in errors
-              li.text-red-700.text-sm.flex.items-center
-                svg.inline(xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="0 0 20 20" fill="currentColor")
-                  path(fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd")
-                span.ml-2 #{error.msg}
+            li.text-red-700.text-sm.flex.items-center
+              svg.inline(xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="0 0 20 20" fill="currentColor")
+                path(fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd")
+              span.ml-2 #{message}
       div.m-4
         a.text-white.text-sm(href="/signup") Create an account
     
