--- a/views/login_form.pug
+++ b/views/login_form.pug
@@ -17,7 +17,7 @@ block content
           span.text-gray-700.text-sm Password
           input#password(type="password" name="password" class="mt-1 block w-full rounded-md bg-gray-200 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0")
         button.bg-yellow-400.text-white.rounded-md.mt-1(type="submit" class="py-2.5") Login
-        a(href="/auth/facebook" type="submit" class="py-2.5").bg-yellow-300.text-white.rounded-md.mt-1.text-center Login with facebook
+        a(href="/auth/facebook" type="submit" class="py-2.5").bg-yellow-300.text-white.rounded-md.mt-1.flex.items-center.justify-center Login with facebook
         if message
           ul
             li.text-red-700.text-sm.flex.items-center
