--- a/views/user_detail.pug
+++ b/views/user_detail.pug
@@ -7,7 +7,7 @@ include ./posts.pug
 block content
   +header
   div(class="sm:flex-row sm:items-start").container.max-w-screen-md.mx-auto.p-6.pt-32.flex.flex-col.space-y-5
-    img(class="sm:w-48 sm:h-48 sm:rounded" src="/images/profile/user-placeholder.svg").h-64.w-screen.bg-yellow-400.bg-cover.self-center.overflow-hidden
+    img(class="sm:w-48 sm:h-48 rounded" src="data:/image/" + user_info.image.contentType + ";base64," + user_info.image.data.toString("base64")).h-64.w-64.bg-yellow-400.self-center.overflow-hidden
     div(class="sm:ml-4")
       div.flex.items-center
         h1.text-3xl.font-semibold.text-gray-800 #{user_info.first_name} #{user_info.last_name}
